--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <div class="hero-insider">
                         <div class="hero-top">
                             <div class="hero-right-content">
-                                <span class="hero-coloured">A dedicate old</span><br>
+                                <span class="hero-coloured">A decade old</span><br>
                                 <span class="hero-text">extensive financial advisory and services provider enabling
                                     our</span>
                                 <strong class="hero-strong">Clients Financial growth</strong>
@@ -111,7 +111,7 @@
                     <div class="hero-insider" id="herocontent">
                         <div class="hero-top">
                             <div class="hero-right-content">
-                                <span class="hero-coloured">A dedicate old</span><br>
+                                <span class="hero-coloured">A decadee old</span><br>
                                 <span class="hero-text">extensive financial advisory and services provider enabling
                                     our</span>
                                 <strong class="hero-strong">Clients Financial growth</strong>
@@ -160,7 +160,7 @@
                     <div class="hero-insider">
                         <div class="hero-top">
                             <div class="hero-right-content">
-                                <span class="hero-coloured">A dedicate old</span><br>
+                                <span class="hero-coloured">A decade old</span><br>
                                 <span class="hero-text">extensive financial advisory and services provider enabling
                                     our</span>
                                 <strong class="hero-strong">Clients Financial growth</strong>
@@ -288,10 +288,10 @@
         <!-- our offering section starts -->
         <div class="our-offering">
             <div class="our-offering-insider">
-                <div class="our-offering-left">
+                <div class="our-offering-left" id="offerleft">
                     <img src="./allimages/Group 24.png" alt="offering image" class="offering-img1">
                 </div>
-                <div class="our-offering-right">
+                <div class="our-offering-right" id="offerright">
                     <div class="our-offering-subheader">
                         established since more than a decade
                     </div>
@@ -312,7 +312,7 @@
         <div class="diversify">
             <div class="divesify-insider">
                 <div class="diversify-content">
-                    <div class="diversify-header">
+                    <div class="diversify-header" id="diverserotate">
                         <strong> Evolving </strong> to diversify into verticals with opportunity
                     </div>
                     <div class="diversify-content1">
@@ -460,7 +460,7 @@
                                 next step</a></button>
                     </div>
                 </div>
-                <div class="offering-right">
+                <div class="offering-right" id="offright">
                     <div class="offering-right-cards">
                         <div class="offering-right-top">
                             <div class="card1">
@@ -487,7 +487,7 @@
                             </div>
                         </div>
                         <div class="offering-right-bottom">
-                            <div class="card1">
+                            <div class="card1" id="cardflip">
                                 <div class="img">
                                     <img src="./allimages/Group 80.svg" alt="" class="offering-card-img">
                                 </div>
