--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
                     CONTACT
                 </div>
                 <div class="contact-form-right-header">
-                    How can we Empower you?
+                    Let's Empower You
                 </div>
                 <div class="contact-form-content">
                     We bring the breathe of our experience and industry
@@ -87,7 +87,7 @@
                         <textarea name="message" id="message" cols="51" rows="10" placeholder="Your Message"></textarea>
                     </p>
                     <p>
-                        <button type="submit" id="submit">SEND A MESSAGE</button>
+                        <button type="submit" id="submit">GET IN TOUCH</button>
                     </p>
                 </form>
             </div>
