--- a/we.html
+++ b/we.html
@@ -67,14 +67,14 @@
                         Established since more than a decade to provide extensive financial advisory and services
                         enabling
                         our client's financial growth and security. We organically grew in the fields of
-                        Insurace,
-                        Indian equity,
-                        Forex trading, business setup services, Real Estate, Asset Creation and Gold Trading
+                        Forex trading, business setup services, Real Estate and asset management.
                         (Tangible and Intangible).<br><br>
 
                         Scoping for opportunitiesas a trait in the DNA led us to venture into the entertainment
                         business
-                        as well.
+                        as well.Join us as we embark on this exciting path, transforming dreams into reality and making
+                        a lasting impact in the realms of finance and entertainment. Together, let's embrace the
+                        possibilities and shape a brighter future.
                     </div>
                     <div class="aboutus-btn">
                         <button type="submit" class="aboutbtn">
