--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 
     <!-- navigation ends -->
-    <!-- starts  -->
+    <!-- hero section starts  -->
     <div id="carouselExampleIndicators" class="carousel slide" data-mdb-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
@@ -105,13 +105,13 @@
                 <!-- hero section ends -->
             </div>
             <div class="carousel-item">
-                <img src="./allimages/trade.jpg" class="d-block w-100" alt="Camera" />
+                <img src="./allimages/trade.jpg" class="d-block w-100" id="hero-img" alt="Wild Landscape" />
                 <!-- hero section starts  -->
-                <div class="carousel-caption d-block w-100" id="hero">
-                    <div class="hero-insider" id="herocontent">
+                <div class="carousel-caption d-block d-md-block w-100" id="hero">
+                    <div class="hero-insider">
                         <div class="hero-top">
                             <div class="hero-right-content">
-                                <span class="hero-coloured">A decadee old</span><br>
+                                <span class="hero-coloured">A decade old</span><br>
                                 <span class="hero-text">extensive financial advisory and services provider enabling
                                     our</span>
                                 <strong class="hero-strong">Clients Financial growth</strong>
@@ -154,9 +154,9 @@
                 <!-- hero section ends -->
             </div>
             <div class="carousel-item">
-                <img src="./allimages/s.jpg" class="d-block w-100" alt="Exotic Fruits" />
+                <img src="./allimages/tradex.jpg" class="d-block w-100" id="hero-img" alt="Wild Landscape" />
                 <!-- hero section starts  -->
-                <div class="carousel-caption d-block w-100" id="hero">
+                <div class="carousel-caption d-block d-md-block w-100" id="hero">
                     <div class="hero-insider">
                         <div class="hero-top">
                             <div class="hero-right-content">
@@ -205,12 +205,10 @@
         </div>
     </div>
 
-    <!-- ends -->
+    <!-- hero section  ends -->
 
 
     <div class="body">
-
-
 
         <!-- about us section starts -->
         <div class="aboutus">
@@ -226,20 +224,7 @@
 
                 <div class="aboutus-body">
                     <div class="about-card-top">
-                        <div class="about-card">
-                            <div class="about-card-img">
-                                <img src="./allimages/Layer -2.svg" alt="" style="height: 75px;">
-                            </div>
-                            <div class="about-card-header">
-                                INDIAN EQUITY
-                            </div>
-                            <div class="about-card-body">
-                                Delivers trusted Indian equity services, empowering individuals and business with
-                                investment
-                                opportunities and market expertise.
-                            </div>
-                        </div>
-                        <div class="about-card">
+                        <div class="about-card" id="aboutrotate">
                             <div class="about-card-img">
                                 <img src="./allimages/Layer -1.svg" alt="" style="height: 75px;">
                             </div>
@@ -251,9 +236,20 @@
                                 trading services
                             </div>
                         </div>
-                    </div>
-                    <div class="about-card-top">
                         <div class="about-card">
+                            <div class="about-card-img" id="aboutrotate">
+                                <img src="./allimages/Layer -4.svg" alt="" style="height: 75px;">
+                            </div>
+                            <div class="about-card-header">
+                                REAL ESTATE(UAE & OVERSEAS)
+                            </div>
+                            <div class="about-card-body">
+                                Offering comprehensive solutions for individualsand business to invest , buy, sell and
+                                manage properties with utmost proffesionalism and expertise.
+                            </div>
+                        </div>
+
+                        <div class="about-card" id="aboutrotate">
                             <div class="about-card-img">
                                 <img src="./allimages/Layer -3.svg" alt="" style="height: 75px;">
                             </div>
@@ -264,18 +260,6 @@
                                 Offers comprehesive business setup services in the UAE, providing expert guidance and
                                 support for individuals and companies to establish and grow their ventures with ease and
                                 efficiency
-                            </div>
-                        </div>
-                        <div class="about-card">
-                            <div class="about-card-img">
-                                <img src="./allimages/Layer -4.svg" alt="" style="height: 75px;">
-                            </div>
-                            <div class="about-card-header">
-                                REAL ESTATE(UAE & OVERSEAS)
-                            </div>
-                            <div class="about-card-body">
-                                Offering comprehensive solutions for individualsand business to invest , buy, sell and
-                                manage properties with utmost proffesionalism and expertise.
                             </div>
                         </div>
                     </div>
@@ -409,7 +393,7 @@
                 <div class="ourvictories-left">
                     <img src="./allimages/Group 72.png" alt="our victories" id="ourvictoriesimg">
                 </div>
-                <div class="ourvictories-right">
+                <div class="ourvictories-right" id="victrt">
                     <div class="ourvictories-subheader">
                         OUR VICTORIES
                     </div>
