--- a/ouroffering.html
+++ b/ouroffering.html
@@ -64,19 +64,19 @@
             <div class="header-left">
                 <div class="header-left-inner">
                     <div class="header-header">
-                        BlueChip fx
+                        BlueChipFx
                     </div>
                     <div class="header-content">
                         A perfect base for forex trading and stock market investment.
-                        Launched in 2021, Bluechip fx is a young trading platform and to its
+                        Launched in 2021, BluechipFx is a young trading platform and to its
                         credit still boasts a satisfied customer base of thousands of active
                         user worldwide.The platform provides easy access to investable
                         products such as currencies, foreign stocks and bonds, commodities
-                        and indices.The minds behind bluechip FX worked closely with
+                        and indices.The minds behind BlueChipFx worked closely with
                         renowned institutional investors until 2021 to provide financial
                         advisory services and Porfolio management services(PMS).<br><br>
                         Having entered the private investment market and added many
-                        clients to our small group BLuechip FX now wants to complete with
+                        clients to our group BluechipFx now wants to complete with
                         the services of world class brokers.All of this and at the same time
                         improving the quality of life for our customers.As we speak,
                         the company has earned up to 500,000 brokerage deals from its secure
