--- a/index.html
+++ b/index.html
@@ -104,7 +104,11 @@
                 </div>
                 <!-- hero section ends -->
             </div>
-            <div class="carousel-item">
+        </div>
+    </div>
+    <div id="carouselExampleIndicators" class="carousel slide" data-mdb-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item ">
                 <img src="./allimages/trade.jpg" class="d-block w-100" id="hero-img" alt="Wild Landscape" />
                 <!-- hero section starts  -->
                 <div class="carousel-caption d-block d-md-block w-100" id="hero">
@@ -153,8 +157,12 @@
                 </div>
                 <!-- hero section ends -->
             </div>
-            <div class="carousel-item">
-                <img src="./allimages/tradex.jpg" class="d-block w-100" id="hero-img" alt="Wild Landscape" />
+        </div>
+    </div>
+    <div id="carouselExampleIndicators" class="carousel slide" data-mdb-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item ">
+                <img src="./allimages/A&Y.jpg" class="d-block w-100" id="hero-img" alt="Wild Landscape" />
                 <!-- hero section starts  -->
                 <div class="carousel-caption d-block d-md-block w-100" id="hero">
                     <div class="hero-insider">
@@ -350,7 +358,7 @@
                                 dedicated to empowering<br> individuals and enabling their financial growth and
                                 independence.
                             </p>
-                            <h5 class="mb-1" id="name-id">Chris Gayle</h5>
+                            <h5 class="mb-1" id="name-id">Erica Fernandes</h5>
                             <p id="post-id">Brand Ambassador</p>
                         </div>
                     </div>
@@ -411,7 +419,7 @@
         <!-- our victories section ends -->
         <!-- offering section starts -->
         <div class="offering">
-            <div class="offering-insider">
+            <div class="offering-insider" id="myElement1">
                 <div class="offeing-left" id="myElement">
                     <div class="offering-subheader">
                         OUR OFFERING
