--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
 
     <!-- navigation ends -->
     <!-- hero section starts  -->
-    <div id="carouselExampleIndicators" class="carousel slide" data-mdb-ride="carousel">
+    <div id="carouselExampleIndicators" class="carousel slide " data-mdb-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <img src="./allimages/sonu sood.jpg" class="d-block w-100" id="hero-img" alt="Wild Landscape" />
                 <!-- hero section starts  -->
                 <div class="carousel-caption d-block d-md-block w-100" id="hero">
                     <div class="hero-insider">
-                        <div class="hero-top">
+                        <div class="hero-top hidden">
                             <div class="hero-right-content">
                                 <span class="hero-coloured">A decade old</span><br>
                                 <span class="hero-text">extensive financial advisory and services provider enabling
@@ -73,7 +73,7 @@
                                 </button>
                             </div>
                         </div>
-                        <div class="hero-bottom">
+                        <div class="hero-bottom hidden">
                             <div class="hero-btn-designs">
                                 <span class="hero-line">
                                     <hr>
@@ -108,7 +108,7 @@
     </div>
     <div id="carouselExampleIndicators" class="carousel slide" data-mdb-ride="carousel">
         <div class="carousel-inner">
-            <div class="carousel-item ">
+            <div class="carousel-item">
                 <img src="./allimages/trade.jpg" class="d-block w-100" id="hero-img" alt="Wild Landscape" />
                 <!-- hero section starts  -->
                 <div class="carousel-caption d-block d-md-block w-100" id="hero">
@@ -161,7 +161,7 @@
     </div>
     <div id="carouselExampleIndicators" class="carousel slide" data-mdb-ride="carousel">
         <div class="carousel-inner">
-            <div class="carousel-item ">
+            <div class="carousel-item">
                 <img src="./allimages/A&Y.jpg" class="d-block w-100" id="hero-img" alt="Wild Landscape" />
                 <!-- hero section starts  -->
                 <div class="carousel-caption d-block d-md-block w-100" id="hero">
@@ -221,7 +221,7 @@
         <!-- about us section starts -->
         <div class="aboutus">
             <div class="about-insider">
-                <div class="aboutus-headers">
+                <div class="aboutus-headers hidden">
                     <div class="about-subheader">
                         ABOUT US
                     </div>
@@ -230,7 +230,7 @@
                     </div>
                 </div>
 
-                <div class="aboutus-body">
+                <div class="aboutus-body hidden">
                     <div class="about-card-top">
                         <div class="about-card" id="aboutrotate">
                             <div class="about-card-img">
@@ -281,7 +281,7 @@
         <div class="our-offering">
             <div class="our-offering-insider">
                 <div class="our-offering-left" id="offerleft">
-                    <img src="./allimages/Group 24.png" alt="offering image" class="offering-img1">
+                    <img src="./allimages/Group 24.png" alt="offering image" class="offering-img1 hidden">
                 </div>
                 <div class="our-offering-right" id="offerright">
                     <div class="our-offering-subheader">
@@ -304,7 +304,7 @@
         <div class="diversify">
             <div class="divesify-insider">
                 <div class="diversify-content">
-                    <div class="diversify-header" id="diverserotate">
+                    <div class="diversify-header hidden" id="diverserotate">
                         <strong> Evolving </strong> to diversify into verticals with opportunity
                     </div>
                     <div class="diversify-content1">
@@ -329,7 +329,7 @@
         <!-- testimonial carousel starts -->
 
         <div id="carouselExampleControls" class="carousel slide text-center carousel-dark" data-mdb-ride="carousel">
-            <div class="carousel-inner" id="carousel-testimonail">
+            <div class="carousel-inner hidden" id="carousel-testimonail">
                 <div class="carousel-item active">
                     <i class="fa-solid fa-quote-right" id="testi-quote"></i>
                     <!-- <i class="fa-sharp fa-solid fa-quote-right" ></i> -->
@@ -399,7 +399,7 @@
         <div class="ourvictories">
             <div class="ourvictories-insider">
                 <div class="ourvictories-left">
-                    <img src="./allimages/Group 72.png" alt="our victories" id="ourvictoriesimg">
+                    <img src="./allimages/Group 72.png" alt="our victories" id="ourvictoriesimg" class="hidden">
                 </div>
                 <div class="ourvictories-right" id="victrt">
                     <div class="ourvictories-subheader">
@@ -420,7 +420,7 @@
         <!-- offering section starts -->
         <div class="offering">
             <div class="offering-insider" id="myElement1">
-                <div class="offeing-left" id="myElement">
+                <div class="offeing-left hidden" id="myElement">
                     <div class="offering-subheader">
                         OUR OFFERING
                     </div>
