--- a/index.html
+++ b/index.html
@@ -104,114 +104,117 @@
                 </div>
                 <!-- hero section ends -->
             </div>
-        </div>
-    </div>
-    <div id="carouselExampleIndicators" class="carousel slide" data-mdb-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item">
-                <img src="./allimages/trade.jpg" class="d-block w-100" id="hero-img" alt="Wild Landscape" />
-                <!-- hero section starts  -->
-                <div class="carousel-caption d-block d-md-block w-100" id="hero">
-                    <div class="hero-insider">
-                        <div class="hero-top">
-                            <div class="hero-right-content">
-                                <span class="hero-coloured">A decade old</span><br>
-                                <span class="hero-text">extensive financial advisory and services provider enabling
-                                    our</span>
-                                <strong class="hero-strong">Clients Financial growth</strong>
-                            </div>
-                            <div class="hero-right-btn">
-                                <button class="hero-btn">
-                                    Let's Work Together
-                                </button>
+            <div id="carouselExampleIndicators" class="carousel slide" data-mdb-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item">
+                        <img src="./allimages/trade.jpg" class="d-block w-100" id="hero-img" alt="Wild Landscape" />
+                        <!-- hero section starts  -->
+                        <div class="carousel-caption d-block d-md-block w-100" id="hero">
+                            <div class="hero-insider">
+                                <div class="hero-top">
+                                    <div class="hero-right-content">
+                                        <span class="hero-coloured">A decade old</span><br>
+                                        <span class="hero-text">extensive financial advisory and services provider
+                                            enabling
+                                            our</span>
+                                        <strong class="hero-strong">Clients Financial growth</strong>
+                                    </div>
+                                    <div class="hero-right-btn">
+                                        <button class="hero-btn">
+                                            Let's Work Together
+                                        </button>
+                                    </div>
+                                </div>
+                                <div class="hero-bottom">
+                                    <div class="hero-btn-designs">
+                                        <span class="hero-line">
+                                            <hr>
+                                        </span>
+                                        <span class="hero-bottom-text">
+                                            Our Business Verticals
+                                        </span>
+                                        <span class="hero-line">
+                                            <hr>
+                                        </span>
+                                    </div>
+                                    <div class="hero-bottom-values">
+                                        <div class="hero-bottom-img">
+                                            <img src="./allimages/music.png" alt="" class="hero-bottom-img">
+                                        </div>
+                                        <div class="hero-bottom-img">
+                                            <img src="./allimages/acre-n-yard.png" alt="" class="hero-bottom-img">
+                                        </div>
+                                        <div class="hero-bottom-img">
+                                            <img src="./allimages/entertainment.png" alt="" class="hero-bottom-img">
+                                        </div>
+                                        <div class="hero-bottom-img">
+                                            <img src="./allimages/tradex.png" alt="" class="hero-bottom-img">
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                        <div class="hero-bottom">
-                            <div class="hero-btn-designs">
-                                <span class="hero-line">
-                                    <hr>
-                                </span>
-                                <span class="hero-bottom-text">
-                                    Our Business Verticals
-                                </span>
-                                <span class="hero-line">
-                                    <hr>
-                                </span>
-                            </div>
-                            <div class="hero-bottom-values">
-                                <div class="hero-bottom-img">
-                                    <img src="./allimages/music.png" alt="" class="hero-bottom-img">
-                                </div>
-                                <div class="hero-bottom-img">
-                                    <img src="./allimages/acre-n-yard.png" alt="" class="hero-bottom-img">
-                                </div>
-                                <div class="hero-bottom-img">
-                                    <img src="./allimages/entertainment.png" alt="" class="hero-bottom-img">
-                                </div>
-                                <div class="hero-bottom-img">
-                                    <img src="./allimages/tradex.png" alt="" class="hero-bottom-img">
-                                </div>
-                            </div>
-                        </div>
+                        <!-- hero section ends -->
                     </div>
                 </div>
-                <!-- hero section ends -->
+            </div>
+            <div id="carouselExampleIndicators" class="carousel slide" data-mdb-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item">
+                        <img src="./allimages/A&Y.jpg" class="d-block w-100" id="hero-img" alt="Wild Landscape" />
+                        <!-- hero section starts  -->
+                        <div class="carousel-caption d-block d-md-block w-100" id="hero">
+                            <div class="hero-insider">
+                                <div class="hero-top">
+                                    <div class="hero-right-content">
+                                        <span class="hero-coloured">A decade old</span><br>
+                                        <span class="hero-text">extensive financial advisory and services provider
+                                            enabling
+                                            our</span>
+                                        <strong class="hero-strong">Clients Financial growth</strong>
+                                    </div>
+                                    <div class="hero-right-btn">
+                                        <button class="hero-btn">
+                                            Let's Work Together
+                                        </button>
+                                    </div>
+                                </div>
+                                <div class="hero-bottom">
+                                    <div class="hero-btn-designs">
+                                        <span class="hero-line">
+                                            <hr>
+                                        </span>
+                                        <span class="hero-bottom-text">
+                                            Our Business Verticals
+                                        </span>
+                                        <span class="hero-line">
+                                            <hr>
+                                        </span>
+                                    </div>
+                                    <div class="hero-bottom-values">
+                                        <div class="hero-bottom-img">
+                                            <img src="./allimages/music.png" alt="" class="hero-bottom-img">
+                                        </div>
+                                        <div class="hero-bottom-img">
+                                            <img src="./allimages/acre-n-yard.png" alt="" class="hero-bottom-img">
+                                        </div>
+                                        <div class="hero-bottom-img">
+                                            <img src="./allimages/entertainment.png" alt="" class="hero-bottom-img">
+                                        </div>
+                                        <div class="hero-bottom-img">
+                                            <img src="./allimages/tradex.png" alt="" class="hero-bottom-img">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- hero section ends -->
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-    <div id="carouselExampleIndicators" class="carousel slide" data-mdb-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item">
-                <img src="./allimages/A&Y.jpg" class="d-block w-100" id="hero-img" alt="Wild Landscape" />
-                <!-- hero section starts  -->
-                <div class="carousel-caption d-block d-md-block w-100" id="hero">
-                    <div class="hero-insider">
-                        <div class="hero-top">
-                            <div class="hero-right-content">
-                                <span class="hero-coloured">A decade old</span><br>
-                                <span class="hero-text">extensive financial advisory and services provider enabling
-                                    our</span>
-                                <strong class="hero-strong">Clients Financial growth</strong>
-                            </div>
-                            <div class="hero-right-btn">
-                                <button class="hero-btn">
-                                    Let's Work Together
-                                </button>
-                            </div>
-                        </div>
-                        <div class="hero-bottom">
-                            <div class="hero-btn-designs">
-                                <span class="hero-line">
-                                    <hr>
-                                </span>
-                                <span class="hero-bottom-text">
-                                    Our Business Verticals
-                                </span>
-                                <span class="hero-line">
-                                    <hr>
-                                </span>
-                            </div>
-                            <div class="hero-bottom-values">
-                                <div class="hero-bottom-img">
-                                    <img src="./allimages/music.png" alt="" class="hero-bottom-img">
-                                </div>
-                                <div class="hero-bottom-img">
-                                    <img src="./allimages/acre-n-yard.png" alt="" class="hero-bottom-img">
-                                </div>
-                                <div class="hero-bottom-img">
-                                    <img src="./allimages/entertainment.png" alt="" class="hero-bottom-img">
-                                </div>
-                                <div class="hero-bottom-img">
-                                    <img src="./allimages/tradex.png" alt="" class="hero-bottom-img">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- hero section ends -->
-            </div>
-        </div>
-    </div>
+
 
     <!-- hero section  ends -->
 
