--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@
                             <div class="hero-insider">
                                 <div class="hero-top">
                                     <div class="hero-right-content">
-                                        <span class="hero-coloured">A decade old</span><br>
-                                        <span class="hero-text">extensive financial advisory and services provider
-                                            enabling
-                                            our</span>
-                                        <strong class="hero-strong">Clients Financial growth</strong>
+                                        <span class="hero-coloured">A decade of </span><br>
+                                        <span class="hero-text">transforming dreams into reality and making a lasting
+                                            impact by </span>
+                                        <strong class="hero-strong">Investing in
+                                            our relationships</strong>
                                     </div>
                                     <div class="hero-right-btn">
                                         <button class="hero-btn">
@@ -167,11 +167,10 @@
                             <div class="hero-insider">
                                 <div class="hero-top">
                                     <div class="hero-right-content">
-                                        <span class="hero-coloured">A decade old</span><br>
-                                        <span class="hero-text">extensive financial advisory and services provider
-                                            enabling
-                                            our</span>
-                                        <strong class="hero-strong">Clients Financial growth</strong>
+                                        <span class="hero-coloured">Scoping for</span><br>
+                                        <span class="hero-text">opportunities as a trait in the DNA embarking on a
+                                        </span>
+                                        <strong class="hero-strong">Path of possibilities</strong>
                                     </div>
                                     <div class="hero-right-btn">
                                         <button class="hero-btn">
@@ -214,8 +213,6 @@
             </div>
         </div>
     </div>
-
-
     <!-- hero section  ends -->
 
 
@@ -225,9 +222,9 @@
         <div class="aboutus">
             <div class="about-insider">
                 <div class="aboutus-headers hidden">
-                    <div class="about-subheader">
+                    <!-- <div class="about-subheader">
                         ABOUT US
-                    </div>
+                    </div> -->
                     <div class="about-header" id="abthead">
                         Our Diversified Business
                     </div>
@@ -409,7 +406,7 @@
                         OUR VICTORIES
                     </div>
                     <div class="ourvictories-header">
-                        Evolving through<br> diversified verticals
+                        Evolving through diversified<br> verticals
                     </div>
                     <div class="ourvictories-btn">
                         <button type="submit" class="ourvictories-btn1">
