--- a/ouroffering.html
+++ b/ouroffering.html
@@ -54,6 +54,30 @@
     </div>
     <!-- hero section ends -->
 
+    <!-- our victories section starts -->
+
+    <div class="ourvictories">
+        <div class="ourvictories-insider">
+            <div class="ourvictories-left">
+                <img src="./allimages/ai-nuclear-energy-future-innovation-disruptive-technology-removebg-preview.png" alt="our victories" id="ourvictoriesimg" class="hidden">
+            </div>
+            <div class="ourvictories-right" id="victrt">
+                <div class="ourvictories-subheader">
+                   Portfolio
+                </div>
+                <div class="ourvictories-header">
+                    We provide portfolio management<br> services
+                </div>
+                <div class="ourvictories-btn">
+                    <button type="submit" class="ourvictories-btn1">
+                        View More
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- our victories section ends -->
+
     <!-- header section starts -->
     <div class="header">
         <div class="header-insider">
