--- a/we.html
+++ b/we.html
@@ -70,7 +70,7 @@
                         Forex trading, business setup services, Real Estate and asset management.
                         (Tangible and Intangible).<br><br>
 
-                        Scoping for opportunitiesas a trait in the DNA led us to venture into the entertainment
+                        Scoping for opportunities as a trait in the DNA led us to venture into the entertainment
                         business
                         as well.Join us as we embark on this exciting path, transforming dreams into reality and making
                         a lasting impact in the realms of finance and entertainment. Together, let's embrace the
@@ -97,8 +97,8 @@
                         VISION
                     </div>
                     <div class="aboutus-card-content">
-                        To facilitate everyone to pursue their dreams by making them
-                        financially independent
+                        To facilitate all our stakeholders to pursue their dreams by making them financially independent
+                        whilst building strong and lasting relationships with them.
                     </div>
                 </div>
                 <div class="aboutusbottom-card1">
