--- a/index.html
+++ b/index.html
@@ -87,16 +87,16 @@
                             </div>
                             <div class="hero-bottom-values">
                                 <div class="hero-bottom-img">
-                                    <img src="./allimages/music.png" alt="" class="hero-bottom-img">
+                                    <img src="./allimages/music.png" alt="" class="hero-bottom-img hidden">
                                 </div>
                                 <div class="hero-bottom-img">
-                                    <img src="./allimages/acre-n-yard.png" alt="" class="hero-bottom-img">
+                                    <img src="./allimages/acre-n-yard.png" alt="" class="hero-bottom-img hidden">
                                 </div>
                                 <div class="hero-bottom-img">
-                                    <img src="./allimages/entertainment.png" alt="" class="hero-bottom-img">
+                                    <img src="./allimages/entertainment.png" alt="" class="hero-bottom-img hidden">
                                 </div>
                                 <div class="hero-bottom-img">
-                                    <img src="./allimages/tradex.png" alt="" class="hero-bottom-img">
+                                    <img src="./allimages/tradex.png" alt="" class="hero-bottom-img hidden">
                                 </div>
                             </div>
                         </div>
@@ -230,9 +230,9 @@
                     </div>
                 </div>
 
-                <div class="aboutus-body hidden">
+                <div class="aboutus-body">
                     <div class="about-card-top">
-                        <div class="about-card" id="aboutrotate">
+                        <div class="about-card hidden" id="aboutrotate">
                             <div class="about-card-img">
                                 <img src="./allimages/Layer -1.svg" alt="" style="height: 75px;">
                             </div>
@@ -244,7 +244,7 @@
                                 trading services
                             </div>
                         </div>
-                        <div class="about-card">
+                        <div class="about-card hidden">
                             <div class="about-card-img" id="aboutrotate">
                                 <img src="./allimages/Layer -4.svg" alt="" style="height: 75px;">
                             </div>
@@ -257,7 +257,7 @@
                             </div>
                         </div>
 
-                        <div class="about-card" id="aboutrotate">
+                        <div class="about-card hidden" id="aboutrotate">
                             <div class="about-card-img">
                                 <img src="./allimages/Layer -3.svg" alt="" style="height: 75px;">
                             </div>
@@ -352,11 +352,10 @@
                     <div class="row d-flex justify-content-center">
                         <div class="col-lg-20">
                             <p class="text-white" id="testi-text">
-                                I am honored to represent as the brand ambassdor for BlueChip Group<br> of Companies, an
-                                esteemed
-                                organization
-                                dedicated to empowering<br> individuals and enabling their financial growth and
-                                independence.
+                                I am delighted to be associated with Bluechip group of companies resonating<br> the
+                                values
+                                of long lasting trust building by investing in relationships<br> leading to an unmatched
+                                win-win scenario for all.
                             </p>
                             <h5 class="mb-1" id="name-id">Erica Fernandes</h5>
                             <p id="post-id">Brand Ambassador</p>
