--- a/victories.html
+++ b/victories.html
@@ -64,7 +64,7 @@
             <div class="header-left">
                 <div class="header-left-inner">
                     <div class="header-header">
-                        Fastest growing platforms in forex expo 2022
+                        Awarded fastest growing platform at Forex Expo 2022
                     </div>
                     <div class="header-content">
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste delectus, veniam itaque nostrum
