--- a/we.html
+++ b/we.html
@@ -49,7 +49,7 @@
     <!-- hero section starts -->
     <div class="hero">
         <div class="hero-insider">
-            <div class="hero-content">
+            <div class="hero-content hidden">
                 Who We Are
             </div>
         </div>
@@ -60,10 +60,10 @@
         <div class="aboutus-insider">
             <div class="aboutus-top">
                 <div class="aboutus-left">
-                    <div class="aboutus-header">
+                    <div class="aboutus-header hidden">
                         About Us
                     </div>
-                    <div class="aboutus-body">
+                    <div class="aboutus-body hidden">
                         Established since more than a decade to provide extensive financial advisory and services
                         enabling
                         our client's financial growth and security. We organically grew in the fields of
@@ -77,7 +77,7 @@
                         possibilities and shape a brighter future.
                     </div>
                     <div class="aboutus-btn">
-                        <button type="submit" class="aboutbtn">
+                        <button type="submit" class="aboutbtn hidden">
                             LEARN MORE
                         </button>
                     </div>
@@ -89,7 +89,7 @@
             </div>
 
             <div class="aboutus-bottom">
-                <div class="aboutusbottom-card1">
+                <div class="aboutusbottom-card1 hidden">
                     <div class="aboutus-card-icon">
                         <img src="./allimages/Group 86.svg" alt="" class="aboutusimg">
                     </div>
@@ -101,7 +101,7 @@
                         whilst building strong and lasting relationships with them.
                     </div>
                 </div>
-                <div class="aboutusbottom-card1">
+                <div class="aboutusbottom-card1 hidden">
                     <div class="aboutus-card-icon">
                         <img src="./allimages/Group 87.svg" alt="" class="aboutusimg">
                     </div>
@@ -117,7 +117,7 @@
                         mutual trust
                     </div>
                 </div>
-                <div class="aboutusbottom-card1">
+                <div class="aboutusbottom-card1 hidden">
                     <div class="aboutus-card-icon">
                         <img src="./allimages/Group 88.svg" alt="" class="aboutusimg">
                     </div>
@@ -141,13 +141,13 @@
         <div class="turst-insider">
             <div class="trust-left">
                 <div class="trust-left-inner">
-                    <div class="trust-icon">
+                    <div class="trust-icon hidden">
                         <img src="./allimages/Group 77.svg" alt="" class="trust-icon-left">
                     </div>
-                    <div class="trust-header">
+                    <div class="trust-header hidden">
                         TRUST &<br> OPENBOOK
                     </div>
-                    <div class="trust-content">
+                    <div class="trust-content hidden">
                         We engage with our internal and external stakeholders
                         to build realtionships based on an organically flourished
                         mutual trust built on the foundation of being
@@ -171,13 +171,13 @@
             </div>
             <div class="empathy-left">
                 <div class="empathy-left-inner">
-                    <div class="empathy-icon">
+                    <div class="empathy-icon hidden">
                         <img src="./allimages/Group 79.svg" alt="" class="empathy-icon-left">
                     </div>
-                    <div class="empathy-header">
+                    <div class="empathy-header hidden">
                         EMPATHY
                     </div>
-                    <div class="empathy-content">
+                    <div class="empathy-content hidden">
                         We work together with you to assess your appetite for risk
                         and your appetite to earn, to customize offerings suiting your
                         investor profile.<br><br>
@@ -195,13 +195,13 @@
         <div class="exellence-insider">
             <div class="exellence-left">
                 <div class="exellence-left-inner">
-                    <div class="exellence-icon">
+                    <div class="exellence-icon hidden">
                         <img src="./allimages/Group 74.svg" alt="" class="exellence-icon-left">
                     </div>
-                    <div class="exellence-header">
+                    <div class="exellence-header hidden">
                         EXCELLENCE
                     </div>
-                    <div class="exellence-content">
+                    <div class="exellence-content hidden">
                         We keep abreast with technological breakthroughs in
                         our line of business and incorporate the same in various
                         trafe and market analysis tools and techniques, in user
