--- a/index.html
+++ b/index.html
@@ -362,23 +362,6 @@
                         </div>
                     </div>
                 </div>
-                <div class="carousel-item">
-                    <i class="fa-solid fa-quote-right" id="testi-quote"></i>
-                    <!-- <i class="fa-sharp fa-solid fa-quote-right" ></i> -->
-                    <div class="row d-flex justify-content-center">
-                        <div class="col-lg-20">
-                            <p class="text-white" id="testi-text">
-                                I am honored to represent as the brand ambassdor for BlueChip Group<br> of Companies, an
-                                esteemed
-                                organization
-                                dedicated to empowering<br> individuals and enabling their financial growth and
-                                independence.
-                            </p>
-                            <h5 class="mb-1" id="name-id">SONU SOOD</h5>
-                            <p id="post-id">Brand Ambassador</p>
-                        </div>
-                    </div>
-                </div>
             </div>
             <button class="carousel-control-prev " type="button" data-mdb-target="#carouselExampleControls"
                 data-mdb-slide="prev">
@@ -405,7 +388,7 @@
                         OUR VICTORIES
                     </div>
                     <div class="ourvictories-header">
-                        Evolving through diversified<br> verticals
+                        Evolving through diversified verticals
                     </div>
                     <div class="ourvictories-btn">
                         <button type="submit" class="ourvictories-btn1">
