--- a/ouroffering.html
+++ b/ouroffering.html
@@ -59,19 +59,12 @@
     <div class="ourvictories">
         <div class="ourvictories-insider">
             <div class="ourvictories-left">
-                <img src="./allimages/ai-nuclear-energy-future-innovation-disruptive-technology-removebg-preview.png" alt="our victories" id="ourvictoriesimg" class="hidden">
+                <img src="./allimages/ai-nuclear-energy-future-innovation-disruptive-technology-removebg-preview.png"
+                    alt="our victories" id="ourvictoriesimg" class="hidden">
             </div>
             <div class="ourvictories-right" id="victrt">
-                <div class="ourvictories-subheader">
-                   Portfolio
-                </div>
                 <div class="ourvictories-header">
-                    We provide portfolio management<br> services
-                </div>
-                <div class="ourvictories-btn">
-                    <button type="submit" class="ourvictories-btn1">
-                        View More
-                    </button>
+                    We provide portfolio management services
                 </div>
             </div>
         </div>
